# Task-Api

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0001_initial.py
app/: main.py
app/api/: deps.py
app/api/v1/: auth.py  router.py  tasks.py
app/core/: cache.py  config.py  rate_limit.py  security.py
app/db/: base.py  session.py
app/models/: __init__.py  task.py  user.py
app/repositories/: __init__.py  base.py  task.py  user.py
app/schemas/: __init__.py  task.py  user.py
app/services/: __init__.py  auth.py  task.py
scripts/: entrypoint.sh
tests/: conftest.py  test_auth.py  test_tasks.py
